# interview-rag-system

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: sample_documents.json
sql/: init-database.sql
src/: __init__.py  main.py
src/core/: config.py
src/db/: database.py
src/models/: __init__.py  audit.py  document.py
src/router/: __init__.py  audit.py  chat.py  knowledge.py
src/services/: __init__.py  audit.py  chat.py  embedding.py  vector_store.py
